--- a/home/src/App.css
+++ b/home/src/App.css
@@ -1,16 +1,15 @@
 .App {
   text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  position: absolute;
+  color: red;
+}
+
+.App-body{
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,6 +18,16 @@
   color: white;
 }
 
+.App-buttons{
+  min-height: 25vh;
+}
+
 .App-link {
   color: #61dafb;
+}
+
+.divider{
+    width:100px;
+    height:auto;
+    display:inline-block;
 }
