connected front and back end

--- a/home/Symptoms-UI/src/app/app.component.html
+++ b/home/Symptoms-UI/src/app/app.component.html
@@ -20,8 +20,8 @@
             <p>{{ question }}</p>
           </ng-container>
           <ng-container *ngIf="done">
-            <!--<h1>{{ name | uppercase }} IS BIG FUCKERINO</h1>
-            <img class="diagnosisImage" src="assets/IDiagnoseYouWithDead.png" />-->
+            <h1>{{ name | uppercase }} IS BIG FUCKERINO</h1>
+            <img class="diagnosisImage" src="assets/IDiagnoseYouWithDead.png" />
           </ng-container>
         </header>
 
