--- a/home/Symptoms-UI/src/app/app.component.html
+++ b/home/Symptoms-UI/src/app/app.component.html
@@ -1,90 +1,75 @@
-<html>
-  <body>
-    <div class="App">
-      <div class="grid">
-        <header className="App-header"></header>
+<img class="logo" src="assets/20SymptomsLogo.jpeg" (click)="rickRoll()" />
+<div class="container">
+  
+  <div class="setupButtons">
+    <mat-form-field>
+      <mat-label>Sex</mat-label>
+      <mat-select required [formControl]="sexControl">
+        <mat-option *ngFor="let sex of sexes" [value]="sex">{{
+          sex
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-        <img
-          class="logo"
-          src="assets/20SymptomsLogo.jpeg"
-          (click)="rickRoll()"
-        />
-
-        <header class="App-body">
-          <!-- <input [(ngModel)]="name" style="margin-bottom: 20px;" />
-          <div>Your name is: {{ name }}</div>-->
-
-          <!--<h1 *ngIf="response | async as res">{{ res.message }}</h1>-->
-          <ng-container *ngIf="!done">
-            <p>Question {{ counter }}:</p>
-            <p *ngIf="response | async as res">{{ res.message }}</p>
-            <p *ngIf="counter === 1">{{ question }}</p>
-          </ng-container>
-          <ng-container *ngIf="done">
-            <h1>{{ name | uppercase }} IS BIG FUCKERINO</h1>
-            <img class="diagnosisImage" src="assets/IDiagnoseYouWithDead.png" />
-          </ng-container>
-        </header>
-
-        <header>
-          <div class="App-buttons">
-            <button mat-raised-button class="YesButton" (click)="yesFunction()">
-              Yes
-            </button>
-            <button
-              mat-raised-button
-              class="DontKnowButton"
-              (click)="idkFunction()"
-            >
-              I Don't Know
-            </button>
-            <button mat-raised-button class="NoButton" (click)="noFunction()">
-              No
-            </button>
-
-            <ng-container *ngIf="done">
-              <button
-                mat-raised-button
-                class="PlayAgainButton"
-                (click)="playAgainFunction()"
-              >
-                Play Again?
-              </button>
-            </ng-container>
-          </div>
-        </header>
-
-        <div class="setupButtons">
-          <mat-form-field id="chooseSex">
-            <mat-label>Sex</mat-label>
-            <mat-select required [formControl]="sexControl">
-              <mat-option *ngFor="let sex of sexes" [value]="sex">{{
-                sex
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field id="chooseAge">
-            <mat-label>Age</mat-label>
-            <mat-select required [formControl]="ageControl">
-              <mat-option *ngFor="let age of ages" [value]="age">{{
-                age
-              }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div class="ProgressBar">
-          <header className="App-progress">
-            <!--<p>Progress: 1/20</p>-->
-            <mat-progress-bar
-              mode="determinate"
-              [value]="(counter / 20) * 100"
-              color="secondary"
-            ></mat-progress-bar>
-          </header>
+    <mat-form-field>
+      <mat-label>Age</mat-label>
+      <mat-select required [formControl]="ageControl">
+        <mat-option *ngFor="let age of ages" [value]="age">{{
+          age
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div *ngIf="!loading">
+    <ng-container *ngIf="evidence.length < 20 && !forcedCompletion">
+      <div *ngIf="!done">
+        <p>Question {{ evidence.length + 1 }}:</p>
+        <p>{{ question.text }}</p>
+      </div>
+      <div *ngIf="evidence.length > 0; else firstQuestion">
+        <div class="buttons">
+          <button
+            *ngFor="
+              let button of [
+                { id: 'present', name: 'Yes' },
+                { id: 'unknown', name: 'I Don\'t Know' },
+                { id: 'absent', name: 'No' }
+              ]
+            "
+            mat-raised-button
+            class="button"
+            [class.yes]="button.id === 'present'"
+            [class.dont-know]="button.id === 'unknown'"
+            [class.no]="button.id === 'absent'"
+            (click)="addEvidence(button.id)"
+          >
+            {{ button.name }}
+          </button>
         </div>
       </div>
-    </div>
-  </body>
-</html>
+    </ng-container>
+    <ng-template #firstQuestion>
+      <div class="buttons">
+        <button
+          *ngFor="let symptom of initialSymptoms"
+          mat-raised-button
+          class="button"
+          (click)="addEvidence('present', symptom.id)"
+        >
+          {{ symptom.name }}
+        </button>
+      </div>
+    </ng-template>
+    <ng-container *ngIf="evidence.length >= 20 || forcedCompletion">
+      <ng-container *ngIf="condition">
+        <div>We have determined that you have {{ condition.common_name }}</div>
+      </ng-container>
+      <div *ngIf="!condition">
+        We could not recognize your condition
+      </div>
+    </ng-container>
+  </div>
+  <div *ngIf="loading">
+    <h1>Loading...</h1>
+  </div>
+</div>
